# onehealth-db

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  codecov.yml  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
_scripts/: gen_ref_pages.py
_scripts/sql/: initial_db_sandbox_setup.sql
about/: index.html
contact/: index.html
data/: index.html
datalake_database/: index.html
deployment/: index.html
docs/: about.md  contact.md  data.md  datalake_database.md  deployment.md  duck_db.md  index.html  inout.md  issues.md  license.md  postgresql_db.md  sample.md
docs/source/javascripts/: md4py.js
docs/source/notebooks/: data_pipeline.ipynb  explore_duckdb.ipynb  insert_data.ipynb  prepare_data.ipynb
docs/source/stylesheets/: md4py.css
docs_extra/: abbreviations.md
heiplanet_db/: main.py  postgresql_database.py  production.py
heiplanet_db/data/: production_config.yml
heiplanet_db/test/: conftest.py  test_postgresql_database.py  test_production.py
issues/: index.html
license/: index.html
models-backend-experiments/: EDA_ERA5Land.ipynb
nginx/conf/: nginx.conf
notebook/: data_pipeline.ipynb  explore_db.ipynb  explore_duckdb.ipynb  explore_netcdf_grib.ipynb  insert_data.ipynb  plot_csv_geodata.ipynb
onehealth_db/: database.py  default_settings.json  duck_database.py  inout.py  main.py  postgresql_database.py  postgresql_db.py  preprocess.py  production.py  script.py  setting_schema.json  utils.py
onehealth_db/data/: production_config.yml
onehealth_db/test/: conftest.py  test_database.py  test_duck_database.py  test_inout.py  test_main.py  test_postgresql_database.py  test_preprocess.py  test_production.py  test_utils.py
onehealth_db/test/data/: era5_2025_03_monthly_area_1-1-0-m1.grib  test_production_config.yml
reference/SUMMARY/: index.html
reference/duck_database/: index.html
reference/inout/: index.html
reference/main/: index.html
reference/postgresql_database/: index.html
reference/preprocess/: index.html
reference/production/: index.html
reference/script/: index.html
reference/utils/: index.html
search/: search_index.json
source/notebooks/data_pipeline/: index.html
source/notebooks/explore_duckdb/: index.html
source/notebooks/insert_data/: index.html
source/notebooks/prepare_data/: index.html
source/stylesheets/: style.css
