[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onehealth-db"
license = {text = "MIT License"}
readme = "README.md"
description = "Database scripts for OneHealth project"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Tuyen Le", email="ssc@iwr.uni-heidelberg.de" },
]
version = "0.0.1"

dependencies = [
  "cdsapi",
  "xarray",
  "netcdf4",
  "cfgrib",
  "duckdb",
  "jupyter",
  "matplotlib",
  "geopandas",
  "sqlalchemy",
  "geoalchemy2",
  "psycopg2-binary",
  "dask[complete]",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "testcontainers",
]

[project.urls]
Homepage = "https://github.com/ssciwr/onehealth"
Issues = "https://github.com/ssciwr/onehealth/issues"
