[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onehealth-db"
license = {text = "MIT License"}
readme = "README.md"
description = "Database scripts for OneHealth project"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Tuyen Le", email="ssc@iwr.uni-heidelberg.de" },
  { name="Inga Ulusoy", email="ssc@iwr.uni-heidelberg.de" },
  { name="Edwin Carreño", email="ssc@iwr.uni-heidelberg.de" },
]
version = "0.0.1"

dependencies = [
  "xarray",
  "netcdf4",
  "jupyter",
  "matplotlib",
  "tqdm",
  "geopandas",
  "sqlalchemy",
  "geoalchemy2",
  "psycopg2-binary",
  "dask[complete]",
  "testcontainers",
  "pooch",
  "fastapi[standard]",
  "uvicorn",
  "scipy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-minify-plugin",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/ssciwr/onehealth-db"
Issues = "https://github.com/ssciwr/onehealth-db/issues"

[tool.setuptools]
packages = ["onehealth_db","onehealth_db.data"]